Tried to fix image spacing using columns, reverted back to width and height utilities on image elements

--- a/css/index.css
+++ b/css/index.css
@@ -8256,9 +8256,9 @@ h5 {
   opacity: 0.7;
 }
 .row .images .image-row img {
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
